test/cases/errors/module-request/errors.js
module.exports = [
	[/Can't resolve 'dependency\.js'/, /Did you mean '\.\/dependency\.js'\?/]
];
